# dsp_book_demos

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
demos/: CMakeLists.txt
demos/convolution_demo/: CMakeLists.txt  main.cpp
demos/floating_point_error_demo/: CMakeLists.txt  main.cpp
demos/reference_implot_demo/: CMakeLists.txt  main.cpp
demos/signal_decomposition_demo/: CMakeLists.txt  imgui_window.h  main.cpp
libdsp/: CMakeLists.txt
libdsp/include/libdsp/gui/: imgui_window.h  text_helpers.h
libdsp/include/libdsp/signal_processing/: signal_processing.h
libdsp/include/libdsp/statistics/: buffer_stats_helpers.h  sample.h  stats.h
libdsp/include/libdsp/storage/: buffer.h
libdsp/src/gui/: imgui_window.cpp  implot_demo.cpp
libdsp/src/statistics/: sample.cpp
libdsp/src/storage/: buffer.cpp
